--- a/10.3stat.ipynb
+++ b/10.3stat.ipynb
@@ -1,8 +1,245 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "284d8546",
+   "metadata": {},
+   "source": [
+    "Stwórz dane z rozkładu normalnego o średniej 3 i odchyleniu standardowym 1 dla 100 oraz 10 000. Na podstawie tych sztucznie stworzonych zbiorów oblicz statystyki poznane w module statystki opisowej. Opisz różnice pomiędzy statystkami i wynik swojej pracy wyślij Mentorowi jako Jupyter Noteboook zapisany w Github"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "cf3012c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy import stats\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "aab747fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_100 = np.random.normal(loc=3, scale=1, size=100)\n",
+    "data_10000 = np.random.normal(loc=3, scale=1, size=10000)\n",
+    "\n",
+    "data_100=pd.Series(data_100)\n",
+    "\n",
+    "# Funkcja obliczająca statystyki opisowe\n",
+    "def descriptive_stats(data):\n",
+    "    dataPd=pd.Series(data)\n",
+    "    return {\n",
+    "        \"Liczba elementów\": len(data),\n",
+    "        \"Średnia\": dataPd.mean(),\n",
+    "        \"Mediana\": dataPd.median(),\n",
+    "        \"ModaPd\": dataPd.mode(),\n",
+    "        \"Moda\": stats.mode(dataPd),\n",
+    "        \"Minimum\": dataPd.min(),\n",
+    "        \"Maksimum\": dataPd.max(),\n",
+    "        \"1. kwartyl\": dataPd.quantile(0.25),\n",
+    "        \"3. kwartyl\": dataPd.quantile(0.75),\n",
+    "        \"Zakres\": dataPd.max()-dataPd.min(),\n",
+    "        \"Rozstęp międzykwartylowy (IQR)\": dataPd.quantile(0.75)- dataPd.quantile(0.25),\n",
+    "        \"Wariancja\": dataPd.var(),\n",
+    "        \"SkośnośćPd\": dataPd.skew()\n",
+    "    }\n",
+    "\n",
+    "# Obliczanie statystyk\n",
+    "stats_100 = descriptive_stats(data_100)\n",
+    "stats_10000 = descriptive_stats(data_10000)\n",
+    "\n",
+    "# Tworzenie DataFrame dla porównania\n",
+    "df_stats = pd.DataFrame([stats_100, stats_10000], index=[\"N=100\", \"N=10000\"])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "2a675537",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>N=100</th>\n",
+       "      <th>N=10000</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Liczba elementów</th>\n",
+       "      <td>100</td>\n",
+       "      <td>10000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Średnia</th>\n",
+       "      <td>2.885983</td>\n",
+       "      <td>2.992488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mediana</th>\n",
+       "      <td>2.831482</td>\n",
+       "      <td>2.994112</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ModaPd</th>\n",
+       "      <td>0    -0.178108\n",
+       "1     0.857171\n",
+       "2     1.057232\n",
+       "3...</td>\n",
+       "      <td>0      -0.625717\n",
+       "1      -0.577824\n",
+       "2      -0.47...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Moda</th>\n",
+       "      <td>(-0.17810832186816672, 1)</td>\n",
+       "      <td>(-0.6257166241312904, 1)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Minimum</th>\n",
+       "      <td>-0.178108</td>\n",
+       "      <td>-0.625717</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Maksimum</th>\n",
+       "      <td>6.082959</td>\n",
+       "      <td>7.216069</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1. kwartyl</th>\n",
+       "      <td>2.210198</td>\n",
+       "      <td>2.326215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3. kwartyl</th>\n",
+       "      <td>3.359693</td>\n",
+       "      <td>3.674785</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zakres</th>\n",
+       "      <td>6.261067</td>\n",
+       "      <td>7.841786</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rozstęp międzykwartylowy (IQR)</th>\n",
+       "      <td>1.149494</td>\n",
+       "      <td>1.34857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wariancja</th>\n",
+       "      <td>1.080084</td>\n",
+       "      <td>0.99133</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SkośnośćPd</th>\n",
+       "      <td>0.301346</td>\n",
+       "      <td>-0.037127</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                            N=100  \\\n",
+       "Liczba elementów                                                              100   \n",
+       "Średnia                                                                  2.885983   \n",
+       "Mediana                                                                  2.831482   \n",
+       "ModaPd                          0    -0.178108\n",
+       "1     0.857171\n",
+       "2     1.057232\n",
+       "3...   \n",
+       "Moda                                                    (-0.17810832186816672, 1)   \n",
+       "Minimum                                                                 -0.178108   \n",
+       "Maksimum                                                                 6.082959   \n",
+       "1. kwartyl                                                               2.210198   \n",
+       "3. kwartyl                                                               3.359693   \n",
+       "Zakres                                                                   6.261067   \n",
+       "Rozstęp międzykwartylowy (IQR)                                           1.149494   \n",
+       "Wariancja                                                                1.080084   \n",
+       "SkośnośćPd                                                               0.301346   \n",
+       "\n",
+       "                                                                          N=10000  \n",
+       "Liczba elementów                                                            10000  \n",
+       "Średnia                                                                  2.992488  \n",
+       "Mediana                                                                  2.994112  \n",
+       "ModaPd                          0      -0.625717\n",
+       "1      -0.577824\n",
+       "2      -0.47...  \n",
+       "Moda                                                     (-0.6257166241312904, 1)  \n",
+       "Minimum                                                                 -0.625717  \n",
+       "Maksimum                                                                 7.216069  \n",
+       "1. kwartyl                                                               2.326215  \n",
+       "3. kwartyl                                                               3.674785  \n",
+       "Zakres                                                                   7.841786  \n",
+       "Rozstęp międzykwartylowy (IQR)                                            1.34857  \n",
+       "Wariancja                                                                 0.99133  \n",
+       "SkośnośćPd                                                              -0.037127  "
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# transpozycja dataFraamu\n",
+    "df_stats.T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5dd18079",
+   "metadata": {},
+   "source": [
+    "Wnioski:przy większej liczbie obserwacji statystyki są bliższe teoretycznym wartościom rozkładu normalnego. Moda w zastosowanych metodach prezentacji/obliczeń nie reprezentuje najczesciej wystepujacej wartosci."
+   ]
+  }
+ ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "example",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
